# Linux-Post-install-Helper

./: .gitignore  BACKUP_CODE.txt  PROJECT_README.md  README.md  compile_me.txt  lpih-main  lpih-main-runnable  lpih-main.c  rebuild_LPIH_installers.sh  style.css  unsaved file 2
.gitignore/: lpih-main  lpih-main-runnable
Build_Automation/: deb_gen.sh
Build_Directory_Template/: LPIH-1.0-2.x86_64.rpm  LPIH.deb  how_to_use.txt  rebuild_LPIH_installers.sh
Build_Directory_Template/LPIH/DEBIAN/: changelog
DEB and RPM/: LPIH-1.0-2.x86_64.rpm  LPIH.deb
DEB and RPM Installer Packages/: LPIH-1.0-2.x86_64.rpm  LPIH.deb
Documentation/: Manual_Compilation_and_Deps.md  PROJECT_README.md  compile_me.txt
Packaging/: LPIH-0.2.1-0.2.1.fc40.x86_64.rpm  LPIH-0.2.1.deb  LPIH-0.2.deb  LPIH-0.3.0.deb  LPIH-0.3.0.rpm  LPIH-1.0-2.deb  LPIH.deb  ToDo.txt  how_to_use.txt  lpih-1.0-1.fc39.x86_64.rpm  lpih-1.0-2.fc40.x86_64.rpm  lpih-1.1-2.x86_64.rpm  packaging_fyi.txt  rebuild_LPIH_installers.sh
Packaging/Packaging_Automation/: deb_gen.sh  rpm_gen.sh
Packaging/rpmbuild/SOURCES/LPIH-0.3.1/: config.h.in  config.status  configure  configure.ac
Packaging/rpmbuild/SOURCES/LPIH-0.3.1/autom4te.cache/: requests
Resources/: deb-info-tab2.txt  deb-text.txt  fed-text.txt  style.css
include/: deb-window.h  fed-window.h  info-window.h  lpih-main.h  lpih-window.h  utility.h
src/: BUILD.md  Makefile  deb-window.c  fed-window.c  info-window.c  lpih-main  lpih-main.c  lpih-string-definitions.c  lpih-window.c  lpih.h  style.css  utility.c
src/include/: lpih-string-definitions.h  lpih.h
(+59 files in other folders)
